first commit of today

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,8 +5,9 @@
   align-items: center;
 
   margin: 0 0 30px;
-  background-color: #00acb0;
+  background-color: transparent;
   overflow: hidden;
+
 }
 
 .nav a {
@@ -14,17 +15,17 @@
 }
 
 .nav-title {
-  font-size: 24px;
+  font-size: 30px;
   font-weight: 700;
-  color: #f2f2f2;
+  color: #b6a2a2;
   padding-left: 10px;
   margin: 0;
 }
 
 .navLink {
   display: inline-block;
-  color: #f2f2f2;
-  background-color: #00acb0;
+  color: #c8bcbc;
+  background-color:transparent;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -38,5 +39,5 @@
 }
 
 .navLink:hover {
-  background-color: #008183;
+  background-color: #346364;
 }
