--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,7 +5,7 @@
   align-items: center;
 
   margin: 0 0 10px;
-  background-color: transparent;
+  background-color: #97b9b9;
   overflow: hidden;
 
 } 
