--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -29,10 +29,10 @@ Button
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  border-color: #014041;
+  border-color: #91afaf;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
+  background-color: #6c7d7e;
   color: #f8f8f8;
   font-size: 1.1rem;
   outline: 0;
@@ -55,7 +55,7 @@ Button
 }
 
 .btn:hover {
-  background-color: #008183;
+  background-color: #97b9b9;
   text-decoration: none;
 }
 
@@ -72,8 +72,8 @@ Button
 
 .btn_asLink:hover {
   background-color: transparent;
-  border-color: #008183;
-  color: #008183;
+  border-color: #97b9b9;
+  color: #97b9b9;
 }
 
 /* --------------------------------------------------------------------------------
@@ -110,3 +110,4 @@ input {
   margin: 5px;
   margin-bottom: 10px;
 }
+
