fixed the pagescroll

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -76,3 +76,12 @@ form{
     padding: 5px;
     margin:5px;
 }
+.chat-container{
+    overflow:scroll;
+    height:60%;
+
+}
+.page-container, #app-container {
+    height:100%;
+
+}
