--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -21,13 +21,13 @@
 
 .page-container{
 background-color:rgb(255, 255, 255);
-max-width: 100%;
+max-width: 200%;
 height: auto;
 
 }
 
 body {
-    background-color:rgb(255, 255, 255)
+    background-color:rgb(246, 251, 250)
 }
 
 form{
@@ -44,6 +44,8 @@ form{
     min-height: auto;
     align-items: left;
     justify-content:flex-start;
+    font-weight: normal;
+    border:none;
 }
 #chat-s{
     align-items: left;
@@ -79,9 +81,12 @@ form{
 .chat-container{
     overflow:scroll;
     height:60%;
+    background-color:rgb(246, 251, 250);
 
 }
 .page-container, #app-container {
     height:100%;
-
+}
+.answer-true{
+    background-color:rgb(145, 202, 224)
 }
