--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,7 @@ body,
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, serif;
   margin: 0px;
+  background-color:rgb(255, 255, 255);
 
 }
 
@@ -21,6 +22,8 @@ Container
 
 .container {
   padding: 20px;
+  background-color:rgb(255, 255, 255);
+
 }
 
 /* --------------------------------------------------------------------------------
@@ -30,10 +33,10 @@ Button
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  border-color: #91afaf;
+  border-color: #d4c8df;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #6c7d7e;
+  background-color: #4b5777;
   color: #e0d1d1;
   font-size: 1.1rem;
   outline: 0;
@@ -56,7 +59,7 @@ Button
 }
 
 .btn:hover {
-  background-color: #97b9b9;
+  background-color: #a3cec1;
   text-decoration: none;
 }
 
